
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8 ;
typedef int PEN ;



void ui_line(uint8 opcode, int startx, int starty, int endx, int endy,
             PEN * pen)
{
}
